--- a/Car_v3/Properties/Resources.resx
+++ b/Car_v3/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Picture2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Picture2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Picture2 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Picture2 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
